--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "environment.d.ts"
+    "environment.d.ts",
+    "src/app/api"
   ],
   "exclude": ["node_modules"]
 }
