--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
   },
