--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
+    "framer-motion": "^10.15.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "next": "13.4.12",
-    "react": "18.2.0",
+    "react": "^18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
@@ -28,6 +31,7 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
