--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.12",
     "framer-motion": "^10.15.0",
     "jwt-decode": "^3.1.2",
+    "leaflet": "^1.9.4",
     "moment": "^2.29.4",
     "next": "13.4.12",
     "react": "^18.2.0",
@@ -26,12 +27,14 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
+    "react-leaflet": "^4.2.1",
     "react-select": "^5.7.4",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.3",
     "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
