--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hot-toast": "^2.4.1",
     "react-leaflet": "^4.2.1",
     "react-select": "^5.7.4",
+    "socket.io-client": "^4.7.2",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "5.1.6",
     "zustand": "^4.3.9"
@@ -39,5 +40,9 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.7",
+    "utf-8-validate": "^5.0.10"
   }
 }
