refactor: update env

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_SERVER_URL=https://airbnb-s0h3.onrender.com
 
-NEXT_PUBLIC_GOOGLE_REDIRECT_URI=https://airbnb-fe-deploy.vercel.app/google-oauth-redirect
+NEXT_PUBLIC_GOOGLE_REDIRECT_URI=https://airbnb-app-minhtri06.vercel.app/google-oauth-redirect
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=945182692173-9kbmv5mst5lb4s8j8b7rjhqsq67ipk6a.apps.googleusercontent.com
